--- a/publication_date.info.yml
+++ b/publication_date.info.yml
@@ -1,6 +1,5 @@
-name = Publication Date
-description = "Add a field containing the publication date."
-core = 7.x
-
-files[] = tests/publication_date.test
-configure = admin/config/content/publication-date
+name: Publication Date
+description: "Add a field containing the publication date."
+type: module
+core: 8.x
+configure: admin/config/content/publication-date
